chore: bs translation fix sinkroniz→sinhroniz
🤖 assisted by claude

--- a/odoo-bringout-oca-stock-logistics-warehouse-account_move_line_stock_info/account_move_line_stock_info/i18n/bs.po
+++ b/odoo-bringout-oca-stock-logistics-warehouse-account_move_line_stock_info/account_move_line_stock_info/i18n/bs.po
@@ -36,4 +36,4 @@ msgstr "Stavke dnevnika"
 #. module: account_move_line_stock_info
 #: model:ir.model,name:account_move_line_stock_info.model_stock_move
 msgid "Stock Move"
-msgstr "Skladišno kretanje"
+msgstr "Skladišni prenos"
