--- a/odoo-bringout-oca-stock-logistics-workflow-product_expiry_simple/product_expiry_simple/i18n/bs.po
+++ b/odoo-bringout-oca-stock-logistics-workflow-product_expiry_simple/product_expiry_simple/i18n/bs.po
@@ -59,7 +59,7 @@ msgstr "Jedan ili više proizvoda ima lotove kojima je <b>istekao rok</b>"
 #. module: product_expiry_simple
 #: model:ir.model,name:product_expiry_simple.model_product_template
 msgid "Product"
-msgstr "Proizvod"
+msgstr "Artikal"
 
 #. module: product_expiry_simple
 #. odoo-python
