--- a/odoo-bringout-oca-stock-logistics-warehouse-procurement_auto_create_group/procurement_auto_create_group/i18n/bs.po
+++ b/odoo-bringout-oca-stock-logistics-warehouse-procurement_auto_create_group/procurement_auto_create_group/i18n/bs.po
@@ -32,7 +32,7 @@ msgstr "Nema definiranog brojevnog kruga za grupe nabave"
 #: model:ir.model,name:procurement_auto_create_group.model_procurement_group
 #, fuzzy
 msgid "Procurement Group"
-msgstr "Nalog za nabavu"
+msgstr "Pavilo nabave"
 
 #. module: procurement_auto_create_group
 #: model:ir.model,name:procurement_auto_create_group.model_stock_rule
