--- a/odoo-bringout-oca-stock-logistics-workflow-stock_move_line_lock_qty_done/stock_move_line_lock_qty_done/i18n/bs.po
+++ b/odoo-bringout-oca-stock-logistics-workflow-stock_move_line_lock_qty_done/stock_move_line_lock_qty_done/i18n/bs.po
@@ -26,7 +26,7 @@ msgstr "Kompanije"
 #. module: stock_move_line_lock_qty_done
 #: model:ir.model,name:stock_move_line_lock_qty_done.model_res_config_settings
 msgid "Config Settings"
-msgstr "Postavke konfiguracije"
+msgstr "Postavke"
 
 #. module: stock_move_line_lock_qty_done
 #: model:ir.model.fields,field_description:stock_move_line_lock_qty_done.field_res_company__lock_qty_done
