--- a/odoo-bringout-oca-stock-logistics-workflow-stock_picking_product_link/stock_picking_product_link/i18n/bs.po
+++ b/odoo-bringout-oca-stock-logistics-workflow-stock_picking_product_link/stock_picking_product_link/i18n/bs.po
@@ -28,7 +28,7 @@ msgstr "Template proizvoda"
 #: code:addons/stock_picking_product_link/models/stock_picking.py
 #, python-format
 msgid "Products"
-msgstr "Proizvodi"
+msgstr "Artikli"
 
 #. module: stock_picking_product_link
 #: model_terms:ir.ui.view,arch_db:stock_picking_product_link.view_picking_form
